--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,4 @@ gradle-app.setting
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
 
+/src/com/capgemini/java8/Solutions.java
